<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frame1Fragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="248dp"
        android:drawableStart="@drawable/logo"
        android:drawablePadding="16dp"
        android:fontFamily="@font/heebo_regular"
        android:gravity="center"
        android:text="@string/books"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text1"
        android:layout_width="328dp"
        android:layout_height="60dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/edit_background"
        android:fontFamily="@font/heebo_regular"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_label1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heebo_regular"
        android:layout_marginStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/email"
        android:textColor="#80FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/edit_text1"
        app:layout_constraintTop_toTopOf="@id/edit_text1" />
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text2"
        android:layout_width="328dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_background"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heebo_regular"
        android:layout_marginStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/senha"
        android:textColor="#80FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/edit_text2"
        app:layout_constraintTop_toTopOf="@id/edit_text2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/heebo_regular"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:textColor="#FFB22E6F"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/edit_text2"
        app:layout_constraintTop_toTopOf="@id/edit_text2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/email_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/heebo_regular"
        android:text="@string/email_e_ou_senha_incorretos"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/edit_text2"
        app:layout_constraintTop_toBottomOf="@id/edit_text2"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>