<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="248dp"
        android:drawableStart="@drawable/logo"
        android:drawablePadding="16dp"
        android:fontFamily="@font/heebo_regular"
        android:gravity="center"
        android:text="@string/books"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_txt_email"
        android:layout_width="328dp"
        android:layout_height="60dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/edit_background"
        android:fontFamily="@font/heebo_regular"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:paddingTop="24dp"
        android:singleLine="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_label1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/heebo_regular"
        android:paddingTop="8dp"
        android:text="@string/email"
        android:textColor="@color/white_50"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/edit_txt_email"
        app:layout_constraintTop_toTopOf="@id/edit_txt_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_txt_passwd"
        android:layout_width="328dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_background"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingTop="24dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/heebo_regular"
        android:paddingTop="8dp"
        android:text="@string/senha"
        android:textColor="@color/white_50"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/edit_txt_passwd"
        app:layout_constraintTop_toTopOf="@id/edit_txt_passwd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_enter"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/heebo_regular"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:textColor="@color/wine"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/edit_txt_passwd"
        app:layout_constraintTop_toTopOf="@id/edit_txt_passwd" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:indeterminateTint="@color/white"
        android:progress="0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/heebo_regular"
        android:text="@string/email_e_ou_senha_incorretos"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/edit_txt_passwd"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_passwd"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>